--- a/_includes/resume/work.liquid
+++ b/_includes/resume/work.liquid
@@ -37,7 +37,8 @@
             <a href="{{ content.url }}">{{ content.position }}</a>
           </h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.name }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: normal">{{ content.summary }}</h6>
+          <p>DEBUG: This is the updated work.liquid file.</p>
           <ul class="items">
             {% for item in content.highlights %}
               <li>
