changing code block colour, again

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,7 +7,7 @@
 :root {
   --global-bg-color: #{$white-color};
   // --global-code-bg-color: #{$-bcodeg-color-light};
-  --global-code-bg-color: #b4f8da; /* Light gray background for code snippets */
+  --global-code-bg-color: #defdf0; /* Light gray background for code snippets */
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
   // --global-theme-color: #{$purple-color};
